--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.13",
     "@mui/material": "^5.15.13",
     "@mui/x-data-grid": "^6.19.8",
+    "@mui/x-date-pickers": "^6.19.8",
+    "axios": "^1.6.8",
+    "dayjs": "^1.11.10",
+    "fs": "^0.0.1-security",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
