--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.6.8",
     "dayjs": "^1.11.10",
     "fs": "^0.0.1-security",
+    "mdi-material-ui": "^7.8.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
