--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.15.13",
+    "@mui/lab": "^5.0.0-alpha.169",
     "@mui/material": "^5.15.13",
     "@mui/x-data-grid": "^6.19.8",
     "@mui/x-date-pickers": "^6.19.8",
